added password reset option

--- a/django_blog/users/templates/users/login.html
+++ b/django_blog/users/templates/users/login.html
@@ -14,7 +14,12 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-mutted">
-                Don't have an account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+                <li>
+                    Don't have an account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+                </li>
+                <li>
+                    Forgot your password? <a class="ml-2" href="{% url 'password_reset' %}">Reset Here</a>
+                </li>
             </small>
         </div>
     </div>
